[gd_scene load_steps=10 format=3 uid="uid://dinbtgkf53bph"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_ukxna"]
[ext_resource type="Texture2D" uid="uid://cbh53cxiljg5y" path="res://Assets/Clouds/Clouds 3/1.png" id="2_7m2e0"]
[ext_resource type="Texture2D" uid="uid://gee6w0v3fcsa" path="res://Assets/Clouds/Clouds 3/2.png" id="3_nfjsi"]
[ext_resource type="FontFile" uid="uid://bma1icmk6wow4" path="res://Assets/fonts/PixelOperator8.ttf" id="3_r7f2m"]
[ext_resource type="FontFile" uid="uid://p71svfp1bvck" path="res://Assets/fonts/PixelOperator8-Bold.ttf" id="4_kdwpn"]
[ext_resource type="Texture2D" uid="uid://drmlq813anfkk" path="res://Assets/Clouds/Clouds 3/3.png" id="4_rsffo"]
[ext_resource type="Texture2D" uid="uid://beeck1pq141vw" path="res://Assets/Clouds/Clouds 3/4.png" id="5_34bmi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_normal"]
bg_color = Color(0.15, 0.18, 0.25, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.5, 0.7, 1.0)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_hover"]
bg_color = Color(0.2, 0.25, 0.35, 1.0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.7, 1.0, 1.0)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0.3, 0.5, 0.8, 0.3)
shadow_size = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_pressed"]
bg_color = Color(0.1, 0.12, 0.18, 1.0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.4, 0.6, 1.0)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_ukxna")

[node name="Background" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GradientBG" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.1, 0.15, 1)

[node name="CloudLayer1" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_7m2e0")
expand_mode = 1
stretch_mode = 6

[node name="CloudLayer2" type="TextureRect" parent="Background"]
modulate = Color(1, 1, 1, 0.7)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_rsffo")
expand_mode = 1
stretch_mode = 6

[node name="CloudLayer3" type="TextureRect" parent="Background"]
modulate = Color(1, 1, 1, 0.5)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_34bmi")
expand_mode = 1
stretch_mode = 6

[node name="ButtonManager" type="Control" parent="."]
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="ButtonManager"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ButtonManager/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitlePanel" type="PanelContainer" parent="ButtonManager/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="ButtonManager/CenterContainer/VBoxContainer/TitlePanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.95, 1, 1)
theme_override_colors/font_shadow_color = Color(0.2, 0.3, 0.5, 0.8)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = ExtResource("4_kdwpn")
theme_override_font_sizes/font_size = 48
text = "FISH and FIH"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="ButtonManager/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Start" type="Button" parent="ButtonManager/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(280, 56)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.95, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_r7f2m")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_pressed")
text = "Play"

[node name="Settings" type="Button" parent="ButtonManager/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(280, 56)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.95, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_r7f2m")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_pressed")
text = "Settings"

[node name="Quit" type="Button" parent="ButtonManager/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(280, 56)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.95, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_r7f2m")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_pressed")
text = "Quit"

[node name="Footer" type="Label" parent="ButtonManager"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.6, 0.65, 0.75, 0.8)
theme_override_fonts/font = ExtResource("3_r7f2m")
theme_override_font_sizes/font_size = 12
text = "Made by Hexaclone Stella"
horizontal_alignment = 1

[node name="SettingsPanel" type="Panel" parent="."]
visible = false
z_index = 20
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.06, 0.1, 0.95)

[node name="CenterContainer" type="CenterContainer" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsPanel/CenterContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="SettingsPanel/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.95, 1, 1)
theme_override_fonts/font = ExtResource("4_kdwpn")
theme_override_font_sizes/font_size = 32
text = "SETTINGS"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="SettingsPanel/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="MasterLabel" type="Label" parent="SettingsPanel/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.75, 0.8, 0.9, 1)
theme_override_fonts/font = ExtResource("3_r7f2m")
theme_override_font_sizes/font_size = 16
text = "Master Volume"

[node name="MasterSlider" type="HSlider" parent="SettingsPanel/CenterContainer/VBoxContainer"]
layout_mode = 2
min_value = 0.0
max_value = 1.0
step = 0.05
value = 1.0

[node name="MusicLabel" type="Label" parent="SettingsPanel/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.75, 0.8, 0.9, 1)
theme_override_fonts/font = ExtResource("3_r7f2m")
theme_override_font_sizes/font_size = 16
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="SettingsPanel/CenterContainer/VBoxContainer"]
layout_mode = 2
min_value = 0.0
max_value = 1.0
step = 0.05
value = 1.0

[node name="SFXLabel" type="Label" parent="SettingsPanel/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.75, 0.8, 0.9, 1)
theme_override_fonts/font = ExtResource("3_r7f2m")
theme_override_font_sizes/font_size = 16
text = "SFX Volume"

[node name="SFXSlider" type="HSlider" parent="SettingsPanel/CenterContainer/VBoxContainer"]
layout_mode = 2
min_value = 0.0
max_value = 1.0
step = 0.05
value = 1.0

[node name="BrightnessLabel" type="Label" parent="SettingsPanel/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.75, 0.8, 0.9, 1)
theme_override_fonts/font = ExtResource("3_r7f2m")
theme_override_font_sizes/font_size = 16
text = "Brightness"

[node name="BrightnessSlider" type="HSlider" parent="SettingsPanel/CenterContainer/VBoxContainer"]
layout_mode = 2
min_value = 0.2
max_value = 1.0
step = 0.05
value = 1.0

[node name="Spacer2" type="Control" parent="SettingsPanel/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Back" type="Button" parent="SettingsPanel/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.95, 1, 1)
theme_override_fonts/font = ExtResource("3_r7f2m")
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_pressed")
text = "‚Üê Back"

[connection signal="pressed" from="ButtonManager/CenterContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="ButtonManager/CenterContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="ButtonManager/CenterContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="value_changed" from="SettingsPanel/CenterContainer/VBoxContainer/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="SettingsPanel/CenterContainer/VBoxContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="SettingsPanel/CenterContainer/VBoxContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="SettingsPanel/CenterContainer/VBoxContainer/BrightnessSlider" to="." method="_on_brightness_slider_value_changed"]
[connection signal="pressed" from="SettingsPanel/CenterContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
